Fixed issue where titles moved out of screen on mobile

--- a/assets/css/typing.css
+++ b/assets/css/typing.css
@@ -5,7 +5,6 @@ html{
 .headertext{
     overflow: hidden;
     position: relative;
-    width: 24em;
     margin: 0 auto;
     border-right: 2px solid rgba(255,255,255,.75);
     text-align: center;
@@ -15,7 +14,6 @@ html{
 
 .navtext{
     position: relative;
-    width: 24em;
     margin: 0 auto;
     border-right: 2px solid rgba(255,255,255,.75);
     text-align: center;
@@ -29,8 +27,8 @@ html{
              blinkTextCursor 500ms steps(44) infinite normal;
 }
 @keyframes typewriter{
-  from{width: 0;}
-  to{width: 24em;}
+  from{width: 0%;}
+  to{width: 100%;}
 }
 @keyframes blinkTextCursor{
   from{border-right-color: rgba(255,255,255,.75);}
